--- a/.github/workflows/job-create-version-release.yml
+++ b/.github/workflows/job-create-version-release.yml
@@ -25,6 +25,7 @@ jobs:
         uses: cycjimmy/semantic-release-action@v2
         with:
           semantic_version: 17
+          branches: ['main']
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: Create Release
