--- a/.github/workflows/job-create-version-release.yml
+++ b/.github/workflows/job-create-version-release.yml
@@ -2,7 +2,8 @@ on:
   workflow_call:
 
 jobs:
-  run:
+  web:
+    name: Web
     timeout-minutes: 15
     runs-on: ubuntu-latest
     environment: production
