--- a/.github/workflows/pipeline-web.yml
+++ b/.github/workflows/pipeline-web.yml
@@ -7,6 +7,7 @@ jobs:
   deploy-to-s3:
     name: Deploy to S3
     runs-on: ubuntu-latest
+    timeout-minutes: 5
     environment: production
     steps:
       - name: Checkout code
