fix release version job

--- a/.github/workflows/pipeline-web.yml
+++ b/.github/workflows/pipeline-web.yml
@@ -27,3 +27,4 @@ jobs:
   create-version-release:
     name: Create Version Release
     uses: ./.github/workflows/job-create-version-release.yml
+    secrets: inherit
