--- a/.github/workflows/job-create-version-release.yml
+++ b/.github/workflows/job-create-version-release.yml
@@ -22,32 +22,12 @@ jobs:
         run: |
           cd web
           npm run build
-      - name: Semantic Release
-        uses: cycjimmy/semantic-release-action@v2
+      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
         with:
-          semantic_version: 17
-          branches: '385-featci-set-up-pipeline-to-deploy-to-s3' # temporary
+          cache: npm
+          node-version: 16
+      - run: npm ci
+      - run: npx semantic-release
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      - name: Create Release
-        id: create_release
-        uses: actions/create-release@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          tag_name: ${{ github.ref }}
-          release_name: Release ${{ github.ref }}
-          body: |
-            Changes in this Release
-            - First Change
-            - Second Change
-      - name: Upload Release Asset
-        id: upload-release-asset
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./web/dist/my-artifact.zip
-          asset_name: my-artifact.zip
-          asset_content_type: application/zip
+          GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
