test modifying package.json releases

--- a/web/package.json
+++ b/web/package.json
@@ -5,8 +5,10 @@
   "type": "module",
   "release": {
     "branches": [
-      "main",
-      "385-featci-set-up-pipeline-to-deploy-to-s3"
+      {
+        "name": "385-featci-set-up-pipeline-to-deploy-to-s3",
+        "prerelease": false
+      }
     ]
   },
   "scripts": {
