--- a/.github/workflows/pipeline-web.yml
+++ b/.github/workflows/pipeline-web.yml
@@ -47,6 +47,6 @@ jobs:
         run: |
           cd web
           npm run build
-      - run: npx semantic-release
+      - run: npm run release
         env:
           GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
