--- a/.github/workflows/pipeline-web.yml
+++ b/.github/workflows/pipeline-web.yml
@@ -5,6 +5,7 @@ on:
 
 jobs:
   cleanup:
+    name: Clean up Deployment History
     environment: production
     runs-on: ubuntu-latest
     permissions: write-all
@@ -14,20 +15,22 @@ jobs:
         uses: strumwolf/delete-deployment-environment@v2
         with:
           token: ${{ secrets.GH_TOKEN }}
-          environment: production
           onlyRemoveDeployments: true
 
   deploy-to-s3:
     name: Deploy to S3
     needs: cleanup
     runs-on: ubuntu-latest
-    timeout-minutes: 10
+    timeout-minutes: 15
     environment: production
     env:
       ENVIRONMENT: production
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
+      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
+        with:
+          cache: npm
+          node-version: 18
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
@@ -46,7 +49,7 @@ jobs:
     name: Create Version Release
     needs: cleanup
     runs-on: ubuntu-latest
-    timeout-minutes: 10
+    timeout-minutes: 15
     environment: production
     steps:
       - uses: actions/checkout@v3
