--- a/web/.releaserc
+++ b/web/.releaserc
@@ -6,7 +6,8 @@
         "releaseRules": [
           { "type": "feat", "scope": "ui", "release": "minor" },
           { "type": "fix", "scope": "ui", "release": "patch" },
-          { "type": "chore", "scope": "ui", "release": "patch" }
+          { "type": "chore", "scope": "ui", "release": "patch" },
+          {"type": "chore",  "release": "patch"}
         ]
       }
     ],
