--- a/.github/workflows/pipeline-release-ui.yml
+++ b/.github/workflows/pipeline-release-ui.yml
@@ -24,7 +24,8 @@ jobs:
         id: analyze
         run: |
           git fetch origin main
-          changes=$(git log --pretty=format:"%s" origin/main..develop | grep -E 'feat\(ui\)|fix\(ui\)|chore\(ui\)')
+          git fetch origin develop
+          changes=$(git log --pretty=format:"%s" origin/main..origin/develop | grep -E 'chore')
           if [ -n "$changes" ]; then
             echo "Changes detected:"
             echo "$changes"
