--- a/.github/workflows/pipeline-release-ui.yml
+++ b/.github/workflows/pipeline-release-ui.yml
@@ -29,20 +29,20 @@ jobs:
           if [ -n "$changes" ]; then
             echo "::set-output name=should_prepare_ui_release::true"
             gh pr comment ${{ github.event.pull_request.number }} --body <<EOF
-              🚀 *Significant modifications detected:*
-              $changes
-              These changes will be incorporated into the forthcoming UI release.
-            EOF
+          🚀 *Significant modifications detected:*
+          $changes
+          These changes will be incorporated into the forthcoming UI release.
+          EOF
           else
             echo "::set-output name=should_prepare_ui_release::false"
-            gh pr comment ${{ github.event.pull_request.number }} --body <<EOF🔍
-              *No significant modifications detected*
+            gh pr comment ${{ github.event.pull_request.number }} --body <<EOF
+            *No significant modifications detected*
 
-              The UI release will be skipped this time
-            EOF
+            The UI release will be skipped this time
+          EOF
           fi
-        env:
-          GH_TOKEN: ${{ secrets.GH_TOKEN }}
+          env:
+            GH_TOKEN: ${{ secrets.GH_TOKEN }}
 
   create-ui-release:
     name: UI
