--- a/.github/workflows/pipeline-release-ui.yml
+++ b/.github/workflows/pipeline-release-ui.yml
@@ -5,6 +5,7 @@ on:
 
 jobs:
   analyze-commits:
+    name: Analyze Commits in Develop
     runs-on: ubuntu-latest
     outputs:
       should_prepare_ui_release: ${{ steps.analyze.outputs.should_prepare_ui_release }}
@@ -30,22 +31,22 @@ jobs:
             echo "::set-output name=should_prepare_ui_release::true"
             gh pr comment ${{ github.event.pull_request.number }} --body <<EOF
           🚀 *Significant modifications detected:*
-          $changes
-          These changes will be incorporated into the forthcoming UI release.
-          EOF
+            $changes
+            These changes will be incorporated into the forthcoming UI release.
+            EOF
           else
             echo "::set-output name=should_prepare_ui_release::false"
             gh pr comment ${{ github.event.pull_request.number }} --body <<EOF
             *No significant modifications detected*
 
             The UI release will be skipped this time
-          EOF
+            EOF
           fi
           env:
             GH_TOKEN: ${{ secrets.GH_TOKEN }}
 
   create-ui-release:
-    name: UI
+    name: Create Release (UI)
     needs: analyze-commits
     runs-on: ubuntu-latest
     timeout-minutes: 15
