--- a/.github/workflows/pipeline-release-ui.yml
+++ b/.github/workflows/pipeline-release-ui.yml
@@ -29,7 +29,7 @@ jobs:
           changes=$(git log --pretty=format:"%s" origin/main..origin/develop | grep -E 'chore')
           if [ -n "$changes" ]; then
             echo "::set-output name=should_prepare_ui_release::true"
-            gh pr comment ${{ github.event.pull_request.number }} --body $'🚀 *Significant modifications detected:*\n'$changes$'\nThese changes will be incorporated into the forthcoming UI release.'
+            gh pr comment ${{ github.event.pull_request.number }} --body $'🚀 *Significant modifications detected:*\n'"$changes"$'\nThese changes will be incorporated into the forthcoming UI release.'
           else
             echo "::set-output name=should_prepare_ui_release::false"
             gh pr comment ${{ github.event.pull_request.number }} --body $'*No significant modifications detected*\nThe UI release will be skipped this time'
