--- a/.github/workflows/pipeline-release-ui.yml
+++ b/.github/workflows/pipeline-release-ui.yml
@@ -2,6 +2,11 @@ name: UI Release Pipeline
 
 on:
   pull_request:
+    branches:
+      - 'main'
+    types:
+      - opened
+      - reopened
 
 jobs:
   analyze-commits:
