--- a/.github/workflows/push-production-web.yml
+++ b/.github/workflows/push-production-web.yml
@@ -1,4 +1,4 @@
-name: Web Pipeline
+name: Production Web
 
 on:
   push:
@@ -10,10 +10,8 @@ on:
 jobs:
   cleanup:
     name: Clean up Deployment History
-    environment: production
     runs-on: ubuntu-latest
     permissions: write-all
-
     steps:
       - name: 🗑 Delete deployment
         uses: strumwolf/delete-deployment-environment@v2
@@ -27,7 +25,6 @@ jobs:
     needs: cleanup
     runs-on: ubuntu-latest
     timeout-minutes: 15
-    environment: production
     env:
       ENVIRONMENT: production
     steps:
@@ -48,6 +45,3 @@ jobs:
         shell: bash
         run: |
           cd scripts && ./deploy_to_s3.sh --bucket-name ${{ secrets.WEBSITE_BUCKET_NAME }} --environment ${{ env.ENVIRONMENT }}
-
-
-
