--- a/.github/workflows/job-analyze-commits.yml
+++ b/.github/workflows/job-analyze-commits.yml
@@ -10,7 +10,7 @@ on:
         value: ${{ jobs.analyze-commits.outputs.should_prepare_web_release }}
       should_prepare_server_release:
         description: "Indicates if a Server release should be prepared"
-        value: ${{ jobs.analyze-commits.outputs.should_prepare_web_release }}
+        value: ${{ jobs.analyze-commits.outputs.should_prepare_server_release }}
 
 jobs:
   analyze-commits:
@@ -38,11 +38,16 @@ jobs:
             git fetch origin develop
             changes=$(git log --pretty=format:"%s" origin/main..origin/develop | grep -E 'feat\(${{inputs.component}}\)|fix\(${{inputs.component}}\)|chore\(${{inputs.component}}\)')
             if [ -n "$changes" ]; then
-              echo "::set-output name=should_prepare_${{ inputs.component }}_release::true"
-              gh pr comment ${{ github.event.pull_request.number }} --body $'### 🚀 **Preparing for ${{ inputs.component }} release**\nThese changes will be incorporated into the forthcoming release:\n\n'"$changes"$''
+              if [ "${{ inputs.component }}" == "web" ]; then
+                echo "::set-output name=should_prepare_web_release::true"
+              elif [ "${{ inputs.component }}" == "server" ]; then
+                echo "::set-output name=should_prepare_server_release::true"
+            fi
+            gh pr comment ${{ github.event.pull_request.number }} --body $'### 🚀 **Preparing for ${{ inputs.component }} release**\nThese changes will be incorporated into the forthcoming release:\n\n'"$changes"$''
             else
-              echo "::set-output name=should_prepare_${{ inputs.component }}_release::false"
-              gh pr comment ${{ github.event.pull_request.number }} --body $'### **Skipping ${{ inputs.component }} release**\n\n${{inputs.component}} release will be skipped this time'
+              echo "::set-output name=should_prepare_web_release::false"
+              echo "::set-output name=should_prepare_server_release::false"
+            gh pr comment ${{ github.event.pull_request.number }} --body $'### **Skipping ${{ inputs.component }} release**\n\n${{inputs.component}} release will be skipped this time'
             fi
         env:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
